src/test/deca/codegen/valid/homemade/test/test_complet_int_depassement_div.deca
{
    float x  = 2147483647;
    x = x *2; 
    println("x = ", (x));
}