src/test/deca/codegen/invalid/homemade/test/test_complet_float_arrondi0_div.deca
{
    float x  = 1.3e-45;
    x = x/2;
    println("x = ", (x));
}